# KraidEngine

./: .gitignore  .nvimrc  CMakeLists.txt  LICENSE  README.md  build-clang.ps1  build.bat  compile_commands.json  imgui.ini  remedy.rdbg  shader.hlsl
src/: Thread.cpp  Thread.h  Window.cpp  Window.h  main.cpp  types.h
src/Core/: BuildDefs.h  Core.h  SystemInformation.cpp  SystemInformation.h  Windows.h  stdcpp.h
src/Core/DataStructures/: ArrayView.h  Buffer.cpp  Buffer.h  DataStructures.h  RefCounter.cpp  RefCounter.h  RingBuffer.h  RingeBuffer.cpp  StringView.h
src/Core/Filesystem/: Directory.cpp  Directory.h  Filesystem.cpp  Filesystem.h
src/Core/Rendering/: Camera.cpp  Camera.h  GUI.cpp  GUI.h  Rendering.h  Transform.cpp  Transform.h
src/Core/Rendering/D3D12/: CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  D3D12.h  D3D12SDK.h  DXGIFactory.cpp  DXGIFactory.h  Fence.cpp  Fence.h  GPUDevice.cpp  GPUDevice.h  IndexBuffer.cpp  IndexBuffer.h  RootSignature.cpp  RootSignature.h  Shader.cpp  Shader.h  ShaderParameter.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
src/Core/Rendering/D3D12/PSO/: Blend.h  PipelineStateObject.cpp  PipelineStateObject.h  Rasterizer.h  StreamOutput.h
src/Core/Rendering/D3D12/Resource/: ConstantBufferView.cpp  ConstantBufferView.h  DepthStencilView.cpp  DepthStencilView.h  DescriptorHeap.cpp  DescriptorHeap.h  RenderTargetView.cpp  RenderTargetView.h  Resource.cpp  Resource.h  ShaderResourceView.cpp  ShaderResourceView.h
src/Core/Rendering/Model/: AABB.cpp  AABB.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h
src/Core/Threading/: JobSystem.cpp  JobSystem.h  Lock.cpp  Lock.h  Thread.cpp  Thread.h  Threading.h
src/Core/Utils/: Log.cpp  Log.h  StringHelpers.h
src/Core/Window/: Window.cpp  Window.h
